--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^5.0.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
+    "styled-components": "^4.3.2",
     "url-loader": "^2.0.0",
     "validator": "^10.7.1",
     "webpack": "^4.19.1",
